--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
     </head>
     <body>
         <h1>Plots del TP-1</h1>
-        <link rel="stylesheet" href="data-nulls.html">
+        <link rel="stylesheet" href="/plots/data-nulls.html">
 </html>
