--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     </head>
     <body>
         <h1>Plots del TP-1</h1>
-        <link rel="stylesheet" href="/plots/data-nulls.html">
+        <div>
+            <link rel="stylesheet" href="/plots/data-nulls.html">
+        </div>
 </html>
