--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <body>
         <h1>Plots del TP-1</h1>
         <li>
-            <link rel="stylesheet" href="/plots/data-nulls.html">
+            <a href="data-nulls.html?plot=1">Porcentaje de Nulos data sin procesar.</a>
         </li>
 </html>
