--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
         <title>DH-DS-Grupo3</title>
     </head>
     <body>
-        <h1>Plots del TP-1</h1>
+        <h1>Grupo3</h1>
+        <h2>Presentación</h2>
+            <iframe src="https://www.canva.com/design/DAFCwPilqCw/dCHgneOft9tf4q5LAHFkMQ/view?presentacion&embed=1" width="100%" height="500" frameborder="0" title="Presentación"></iframe>
+        <h2>Porcentaje de Nulos por Columna</h2>
         <li>
-            <a href="data-nulls.html?plot=1">Porcentaje de Nulos data sin procesar.</a>
+            <a href=""></a>
         </li>
+    </body>
 </html>
