--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Grupo3</h1>
         <h2>Presentación</h2>
-            <iframe src="https://www.canva.com/design/DAFCwPilqCw/dCHgneOft9tf4q5LAHFkMQ/view?presentacion&embed=1" width="100%" height="500" frameborder="0" title="Presentación"></iframe>
+            <iframe src="https://www.canva.com/design/DAFCwPilqCw/dCHgneOft9tf4q5LAHFkMQ/view?presentacion&embed=1" width="100%" height="100%" frameborder="0" title="Presentación Grupo-3"></iframe>
         <h2>Porcentaje de Nulos por Columna</h2>
         <li>
             <a href=""></a>
