--- a/index.html
+++ b/index.html
@@ -8,9 +8,24 @@
         <h1>Grupo3</h1>
         <h2>Presentación</h2>
             <iframe src="https://www.canva.com/design/DAFCwPilqCw/dCHgneOft9tf4q5LAHFkMQ/view?presentacion&embed=1" width="100%" height="100%" frameborder="0" title="Presentación Grupo-3"></iframe>
-        <h2>Porcentaje de Nulos por Columna</h2>
-        <li>
-            <a href=""></a>
-        </li>
+
+        <h1>Plots del dataset</h1>
+        <ul>
+            <h2>Porcentaje de Nulos por Columna</h2>
+            <link>
+                <a href="https://github.com/CIEX52/ciex52.github.io/blob/78523854ee31c21f78d139cd56755c5de62f9bf5/nulos_data.html">
+
+            <h2>Porcentaje de Nulos despues de procesar el dataset</h2>
+            <link>
+                <a href="https://github.com/CIEX52/ciex52.github.io/blob/78523854ee31c21f78d139cd56755c5de62f9bf5/nulos_data2.html">
+
+            <h2>Porcentaje de Porpiedades por Provincia/Zona</h2>
+            <link>
+                <a href="https://github.com/CIEX52/ciex52.github.io/blob/78523854ee31c21f78d139cd56755c5de62f9bf5/prop_x_prov-zonas.html">
+
+            <h2>Precios U$D por Porvincia/Zona</h2>
+            <link>
+                <a href="https://github.com/CIEX52/ciex52.github.io/blob/78523854ee31c21f78d139cd56755c5de62f9bf5/precio_uds_state_name.html">
+        </ul>
     </body>
 </html>
