--- a/index.html
+++ b/index.html
@@ -11,21 +11,10 @@
 
         <h1>Plots del dataset</h1>
         <ul>
-            <h2>Porcentaje de Nulos por Columna</h2>
-            <link>
-                <a href="https://github.com/CIEX52/ciex52.github.io/blob/78523854ee31c21f78d139cd56755c5de62f9bf5/nulos_data.html">
-
-            <h2>Porcentaje de Nulos despues de procesar el dataset</h2>
-            <link>
-                <a href="https://github.com/CIEX52/ciex52.github.io/blob/78523854ee31c21f78d139cd56755c5de62f9bf5/nulos_data2.html">
-
-            <h2>Porcentaje de Porpiedades por Provincia/Zona</h2>
-            <link>
-                <a href="https://github.com/CIEX52/ciex52.github.io/blob/78523854ee31c21f78d139cd56755c5de62f9bf5/prop_x_prov-zonas.html">
-
-            <h2>Precios U$D por Porvincia/Zona</h2>
-            <link>
-                <a href="https://github.com/CIEX52/ciex52.github.io/blob/78523854ee31c21f78d139cd56755c5de62f9bf5/precio_uds_state_name.html">
+            <iframe src="nulos_data.html" style="height: 100%; width: 100%"></iframe>
+            <iframe src="nulos_data2.html" style="height: 100%; width: 100%"></iframe>
+            <iframe src="prop_x_prov-zonas.html" style="height: 100%; width: 100%"></iframe>
+            <iframe src="precio_uds_state_name.html" style="height: 100%; width: 100%"></iframe>
         </ul>
     </body>
 </html>
