--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
             <iframe src="https://www.canva.com/design/DAFCwPilqCw/dCHgneOft9tf4q5LAHFkMQ/view?presentacion&embed=1" width="100%" height="100%" frameborder="0" title="Presentación Grupo-3"></iframe>
 
         <h1>Plots del dataset</h1>
-        <ul>
+        <div>
+            <a href="https://github.com/CIEX52/ciex52.github.io/blob/73de288962dd258482916ebcf787f6b674676e47/folium_map.html">Mapa Propiedades con librería Folium</a>
+        </div>
+        <!-- <ul>
             <iframe src="nulos_data.html" style="height: 100%; width: 100%"></iframe>
             <iframe src="nulos_data2.html" style="height: 100%; width: 100%"></iframe>
             <iframe src="prop_x_prov-zonas.html" style="height: 100%; width: 100%"></iframe>
             <iframe src="precio_uds_state_name.html" style="height: 100%; width: 100%"></iframe>
-        </ul>
+            <iframe src="correlacion_data2.html" style="height: 100%; width: 100%"></iframe>
+        </ul> -->
     </body>
 </html>
