update path map and add h2

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
         <h1>Plots del dataset</h1>
         <div>
-            <a href="https://htmlpreview.github.io/https://github.com/CIEX52/ciex52.github.io/blob/73de288962dd258482916ebcf787f6b674676e47/folium_map.html">Mapa Propiedades con librería Folium</a>
+            <h2>Librería Folium</h2>
+            <a href="folium_map.html">Ubicaión de Propiedades</a>
         </div>
         <!-- <ul>
             <iframe src="nulos_data.html" style="height: 100%; width: 100%"></iframe>
