update path map

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Plots del dataset</h1>
         <div>
             <h2>Librería Folium</h2>
-            <a href="folium_map.html">Ubicaión de Propiedades</a>
+            <a href="/folium_map.html">Ubicaión de Propiedades</a>
         </div>
         <!-- <ul>
             <iframe src="nulos_data.html" style="height: 100%; width: 100%"></iframe>
