--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
         <h1>Plots del dataset</h1>
         <div>
-            <h2>Mapa de calor de la distribución de propiedades, con un sample de 1000 muestras.</h2>
-            <a href="/folium_map.html">Mapa</a>
+            <a href="/folium_map.html">Mapa de calor de la distribución de propiedades, con un sample de 1000 muestras.</a>
         </div>
         <!-- <ul>
             <iframe src="nulos_data.html" style="height: 100%; width: 100%"></iframe>
